# OlivOSPluginTemplate

./: README.md  pyproject.toml
.github/workflows/: ci.yml
OlivOSPluginTemplate/: __init__.py  app.json  main.py
